--- a/smartfarm_page/templates/index.html
+++ b/smartfarm_page/templates/index.html
@@ -37,6 +37,7 @@
                         <div class="text-center text-white">
                             <!-- Page heading-->
                             <h2 class="mb-5">차세대융합기술연구원 공공융합플랫폼</h2>
+                            <h3> 김혜린 선배님 ~ 연습삼아 만들어봤어요 ㅎㅎㅎㅎㅎ ^ ^ </h3>
                         </div>
                     </div>
                 </div>
