--- a/smartfarm_page/templates/index.html
+++ b/smartfarm_page/templates/index.html
@@ -36,7 +36,7 @@
                     <div class="col-xl-6">
                         <div class="text-center text-white">
                             <!-- Page heading-->
-                            <h2 class="mb-5">차세대융합기술연구원 공공융합플랫폼</h2>
+                            <h2 class="mb-1">차세대융합기술연구원 공공융합플랫폼</h2>
                         </div>
                     </div>
                 </div>
@@ -53,7 +53,7 @@
                             <div class="text-center">
                                 <h2 class="fs-4 fw-bold">딸기 스마트팜 분석</h2>
                                 <div class="row mb-3"></div>
-                                <a href="#" class="btn btn-primary btn-m"> 바로 가기 </a>
+                                <a href="str_smartfarm1" class="btn btn-primary btn-m"> 바로 가기 </a>
                             </div>
                         </div>
                     </div>
@@ -62,7 +62,8 @@
                             <div class="text-center">
                                 <h2 class="fs-4 fw-bold">영유아 스마트 케어</h2>
                                 <div class="row mb-3"></div>
-                                <a href="#" class="btn btn-primary btn-m"> 바로 가기 </a>
+                                <a href="kids_pattern1" class="btn btn-primary btn-m"> 바로 가기 </a>
+
                             </div>
                         </div>
                     </div>
@@ -71,7 +72,7 @@
                             <div class="text-center">
                                 <h2 class="fs-4 fw-bold">미세먼지 현황</h2>
                                 <div class="row mb-3"></div>
-                                <a href="#" class="btn btn-primary btn-m"> 바로 가기 </a>
+                                <a href="finedust1" class="btn btn-primary btn-m"> 바로 가기 </a>
                             </div>
                         </div>
                     </div>
@@ -100,14 +101,18 @@
                         <ul class="list-inline mb-0">
                             <li class="list-inline-item me-4">
                                 <a href="https://aict.snu.ac.kr/">
-                                    <img src="{% static 'smartfarm_page/assets/img/AICT_logo2.jpg' %}" width="43" height="43" alt="">
+                                    <img src="{% static 'smartfarm_page/assets/img/aict_logo.png' %}" width="43" height="43" alt="">
                                 </a>
                             </li>
                             <li class="list-inline-item me-4">
-                                <a href="#!"><i class="bi-twitter fs-3"></i></a>
+                                <a href="https://www.snu.ac.kr/">
+                                    <img src="{% static 'smartfarm_page/assets/img/snu_logo.png' %}" width="43" height="43" alt="">
+                                </a>
                             </li>
-                            <li class="list-inline-item">
-                                <a href="#!"><i class="bi-instagram fs-3"></i></a>
+                            <li class="list-inline-item me-4">
+                                <a href="https://www.gg.go.kr/">
+                                    <img src="{% static 'smartfarm_page/assets/img/ggd_logo.png' %}" width="55" height="25" alt="">
+                                </a>
                             </li>
                         </ul>
                     </div>
