--- a/smartfarm_page/templates/index.html
+++ b/smartfarm_page/templates/index.html
@@ -63,14 +63,13 @@
                                 <h2 class="fs-4 fw-bold">영유아 스마트 케어</h2>
                                 <div class="row mb-3"></div>
                                 <a href="kids_pattern1" class="btn btn-primary btn-m"> 바로 가기 </a>
-
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-6 col-xxl-4 mb-5">
                         <div class="card justify-content-center" style="height:320px; background-image: url('../static/smartfarm_page/assets/img/dust.png');">
                             <div class="text-center">
-                                <h2 class="fs-4 fw-bold">미세먼지 현황</h2>
+                                <h2 class="fs-4 fw-bold">미세먼지 현황 분석</h2>
                                 <div class="row mb-3"></div>
                                 <a href="finedust1" class="btn btn-primary btn-m"> 바로 가기 </a>
                             </div>
