--- a/smartfarm_page/templates/index.html
+++ b/smartfarm_page/templates/index.html
@@ -16,8 +16,6 @@
         <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="{% static 'smartfarm_page/css/styles.css' %}?after" rel="stylesheet" />
-
-
     </head>
     <body>
         <!-- Navigation-->
@@ -43,45 +41,62 @@
             </div>
         </header>
 
-        <!-- Page Content-->
-        <section class="pt-4 bg-light">
-            <div class="container px-lg-6 bg-light">
-                <!-- Page Features-->
-                <div class="row gx-lg-5">
-                    <div class="col-lg-6 col-xxl-4 mb-5">
-                        <div class="card justify-content-center" style="height:320px; background-image: url('../static/smartfarm_page/assets/img/strawberries.png');">
-                            <div class="text-center">
-                                <h2 class="fs-4 fw-bold">딸기 스마트팜 분석</h2>
-                                <div class="row mb-3"></div>
-                                <a href="str_smartfarm1" class="btn btn-primary btn-m"> 바로 가기 </a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-6 col-xxl-4 mb-5">
-                        <div class="card justify-content-center" style="height:320px; background-image: url('../static/smartfarm_page/assets/img/child.png');">
-                            <div class="text-center">
-                                <h2 class="fs-4 fw-bold">영유아 스마트 케어</h2>
-                                <div class="row mb-3"></div>
-                                <a href="kids_pattern1" class="btn btn-primary btn-m"> 바로 가기 </a>
+<!--        Page Content-->
+        <body class="bg-light">
+        <body>
+          <div class="row mb-5"></div>
+            <div class="container">
+              <div class="row">
+                  <div class="col-4 ">
+                  <div class="card "; onclick="location.href='str_smartfarm1';" style="cursor:pointer;" >
+                      <div style="text-align:center;">
+                          <div class="row mb-3"></div>
+                          <img src="{% static 'smartfarm_page/assets/img/strawberries2.png' %}" width="300" height="300" alt=""/></a>
+                      </div>
+                    <div class="row mb-2"></div>
+                       <div class="card-body ">
+                      <h4 class="text-center card-title">딸기 스마트팜 분석</h4>
+                      <p class="card-text" style="text-align:center;" >딸기의 환경 및 생육 빅데이터를 활용한<br> 주간 딸기 수확량 예측 </p>
 
-                            </div>
-                        </div>
                     </div>
-                    <div class="col-lg-6 col-xxl-4 mb-5">
-                        <div class="card justify-content-center" style="height:320px; background-image: url('../static/smartfarm_page/assets/img/dust.png');">
-                            <div class="text-center">
-                                <h2 class="fs-4 fw-bold">미세먼지 현황 분석</h2>
-                                <div class="row mb-3"></div>
-                                <a href="finedust1" class="btn btn-primary btn-m"> 바로 가기 </a>
-                            </div>
-                        </div>
-                    </div>
+                  </div>
                 </div>
-            </div>
-        </section>
+                <div class="col-4">
+                  <div class="card"; onclick="location.href='kids_pattern1';" style="cursor:pointer;" >
+                      <div style="text-align:center;">
+                          <div class="row mb-4"></div>
+                    <img src="{% static 'smartfarm_page/assets/img/child2.png' %}" width="300" height="300" alt=""/>
+                      </div>
+                    <div class="text-center card-body">
+                        <h4 class="card-name" >영유아 스마트 케어</h4>
+                      <p class="card-text">라이프 케어 데이터를 기반으로<br> 영유아 상태 패턴 분석 및 이상징후 조기 감지 </p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-4">
+                  <div class="card"; onclick="location.href='finedust1';" style="cursor:pointer;" >
+                      <div style="text-align:center;">
+                        <div class="row mb-4"></div>
+                    <img src="{% static 'smartfarm_page/assets/img/dust2.png' %}" width="300" height="300" alt=""/>
+                      </div>
+                    <div class="text-center card-body">
+                      <h4 class="card-title">미세먼지 현황 분석</h4>
+                      <p class="card-text">미세먼지 데이터를 활용하여<br> 국내 대기오염도 심층분석 및 활동 가이드라인제시</p>
 
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+            <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+          </body>
+        </body>
 
         <!-- Footer-->
+                  <div class="row mb-5"></div>
+
         <footer class="footer bg-light">
             <div class="container">
                 <div class="row">
