--- a/smartfarm_page/templates/finedust1.html
+++ b/smartfarm_page/templates/finedust1.html
@@ -16,16 +16,16 @@
         <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="{% static 'smartfarm_page/css/styles.css' %}?after" rel="stylesheet" />
-
-
     </head>
     <body>
         <!-- Navigation-->
         <nav class="navbar navbar-expand-sm navbar-light bg-light static-top">
             <div class="container">
-                <a class="navbar-brand" href="#!">
+                <a class="navbar-brand" href="../">
                     <img src="{% static 'smartfarm_page/assets/img/logo.png' %}" width="160" height="50" alt="">
                     <a class="btn btn-primary" href="#signup">LOGIN </a>
                 </a>
             </div>
         </nav>
+    </body>
+</html>
