--- a/smartfarm_page/templates/kids_pattern1.html
+++ b/smartfarm_page/templates/kids_pattern1.html
@@ -23,9 +23,11 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-sm navbar-light bg-light static-top">
             <div class="container">
-                <a class="navbar-brand" href="#!">
+                <a class="navbar-brand" href="../">
                     <img src="{% static 'smartfarm_page/assets/img/logo.png' %}" width="160" height="50" alt="">
                     <a class="btn btn-primary" href="#signup">LOGIN </a>
                 </a>
             </div>
         </nav>
+    </body>
+</html>
