--- a/smartfarm_page/templates/str_smartfarm1.html
+++ b/smartfarm_page/templates/str_smartfarm1.html
@@ -95,7 +95,10 @@
                         <div class="row justify-content-center">
                             <div class="col-md-12 col-lg-10 col-12">
                                 <div class="mb-2 mt-4">
-                                    <div class="text-center"><button type="button" class="btn btn-success btn-block"><medium class="font-weight-bold">저장하기</medium></button> </div>
+
+                                    <div class="text-center">
+                                        <a href ="str_smartfarm2" class="btn btn-success btn-block"><medium class="font-weight-bold" >다 음</medium> </a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -104,22 +107,7 @@
             </div>
         </section>
 
-<<<<<<< HEAD
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-=======
         <!-- Footer-->
         <footer class="footer bg-light">
             <div class="row mb-5"></div>
@@ -174,4 +162,3 @@
         <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
     </body>
 </html>
->>>>>>> master
