--- a/smartfarm_page/templates/str_smartfarm2.html
+++ b/smartfarm_page/templates/str_smartfarm2.html
@@ -62,7 +62,7 @@
                 <div class="row mb-5"></div>
                 <div class="card shadow mb-4">
                     <div class="card-header py-3">
-                    <h6 class="m-0 font-weight-bold text-primary">우수농가 평균 내부 온도</h6>
+                    :<h6 class="m-0 font-weight-bold text-primary">우수농가 평균 내부 온도</h6>
                     </div>
                     <div class="card-body ">
                         <div class="chart-area">
