--- a/smartfarm_page/templates/str_smartfarm2.html
+++ b/smartfarm_page/templates/str_smartfarm2.html
@@ -62,7 +62,7 @@
                 <div class="row mb-5"></div>
                 <div class="card shadow mb-4">
                     <div class="card-header py-3">
-                    :<h6 class="m-0 font-weight-bold text-primary">우수농가 평균 내부 온도</h6>
+                    <h6 class="m-0 font-weight-bold text-primary">우수농가 평균 내부 온도</h6>
                     </div>
                     <div class="card-body ">
                         <div class="chart-area">
@@ -145,20 +145,20 @@
         <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
 
 
-    <!-- Bootstrap core JavaScript-->
-    <script src="{% static 'smartfarm_page/vendor/jquery/jquery.min.js' %}"></script>
-    <script src="{% static 'smartfarm_page/vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+        <!-- Bootstrap core JavaScript-->
+        <script src="{% static 'smartfarm_page/vendor/jquery/jquery.min.js' %}"></script>
+        <script src="{% static 'smartfarm_page/vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
 
-    <!-- Core plugin JavaScript-->
-    <script src="{% static 'smartfarm_page/vendor/jquery-easing/jquery.easing.min.js' %}"></script>
+        <!-- Core plugin JavaScript-->
+        <script src="{% static 'smartfarm_page/vendor/jquery-easing/jquery.easing.min.js' %}"></script>
 
-    <!-- Custom scripts for all pages-->
-    <script src="{% static 'smartfarm_page/js/sb-admin-2.min.js' %}"></script>
+        <!-- Custom scripts for all pages-->
+        <script src="{% static 'smartfarm_page/js/sb-admin-2.min.js' %}"></script>
 
-    <!-- Page level plugins -->
-    <script src="{% static 'smartfarm_page/vendor/chart.js/Chart.min.js' %}"></script>
+        <!-- Page level plugins -->
+        <script src="{% static 'smartfarm_page/vendor/chart.js/Chart.min.js' %}"></script>
 
-    <!-- Page level custom scripts -->
-    <script src="{% static 'smartfarm_page/js/chart-area-demo.js' %}"></script>
+        <!-- Page level custom scripts -->
+        <script src="{% static 'smartfarm_page/js/chart-area-demo.js' %}"></script>
     </body>
 </html>
