--- a/smartfarm_page/templates/str_smartfarm2.html
+++ b/smartfarm_page/templates/str_smartfarm2.html
@@ -17,6 +17,9 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" type="text/css" />
         <!-- Chartjs CSS CDN-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+        <!--Using JS-->
+        <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
         <!-- Custom styles for this template-->
         <link href="{% static 'smartfarm_page/css/sb-admin-2.css' %}?after" rel="stylesheet" />
         <link href="{% static 'smartfarm_page/css/styles.css' %}?after" rel="stylesheet" />
@@ -75,7 +78,20 @@
                         <hr>
                     </div>
                 </div>
-            </div>
+                <!--임의로 만들어보는 그래프1 -->
+                <div class="row mb-3"></div>
+                <div class="card shadow mb-4">
+                    <div class="card-header py-3">
+                        <h6 class="m-0 font-weight-bold text-primary">우수농가 평균 내부 내부 CO2</h6>
+                    </div>
+                    <div class="card-body">
+                        <div class="chart-area">
+                            <canvas id="line1" width="1200" height="300"></canvas>
+                        </div>
+                        <hr>
+                    </div>
+                </div>
+
 
             <div class="text-center"> 👇 더 많은 데이터가 필요하다면 이곳을 참고해주세요 👀
             <div class="row mb-3"></div>
@@ -142,5 +158,82 @@
 
         <!-- Page level custom scripts -->
         <script src="{% static 'smartfarm_page/js/chart-area-demo.js' %}"></script>
+
+<script>
+// 차트를 그럴 영역을 dom요소로 가져온다.
+var chartArea = document.getElementById('line1')
+// 차트를 생성한다.
+var myChart = new Chart(chartArea, {
+    // ①차트의 종류(String)
+    type: 'line',
+    // ②차트의 데이터(Object)
+    data: {
+        // ③x축에 들어갈 이름들(Array)
+        labels: ['Red', 'Blue', 'Yellow', 'Green', 'Purple', 'Orange','a','b','c','d','e','f'],
+        // ④실제 차트에 표시할 데이터들(Array), dataset객체들을 담고 있다.
+        datasets: [{
+            // ⑤dataset의 이름(String)
+            label: 'My Farm',
+            // ⑥dataset값(Array)
+            data: [12, 19, 3, 5, 2, 3,5,5,5,5,5,5],
+
+            // ⑧dataset의 선 색(rgba값을 String으로 표현)
+            borderColor: 'rgb(255, 99, 132)',
+            fill : false,
+            // ⑨dataset의 선 두께(Number)
+            borderWidth: 3
+        },{
+            // ⑤dataset의 이름(String)
+            label: '# of Votes',
+            // ⑥dataset값(Array)
+            data: [2, 2, 3, 5, 19, 17,5,4,2,10,15,5],
+            // ⑧dataset의 선 색(rgba값을 String으로 표현)
+            borderColor: 'rgb(0, 0, 0)',
+            fill : false,
+            // ⑨dataset의 선 두께(Number)
+            borderWidth: 3
+            }],
+    // ⑩차트의 설정(Object)
+    options: {
+    maintainAspectRatio: false,
+
+    scales: {
+      xAxes: [{
+
+        ticks: {
+          maxTicksLimit: 7
+        }
+      }],
+      yAxes: [{
+        ticks: {
+          maxTicksLimit: 5,
+          padding: 10,
+          // Include a dollar sign in the ticks
+          callback: function(value, index, values) {
+            return '$' + number_format(value);
+          }
+        },
+        gridLines: {
+          color: "rgb(0, 0, 0)",
+          zeroLineColor: "rgb(0, 0, 0)",
+          drawBorder: false,
+          borderDash: [2],
+          zeroLineBorderDash: [2]
+        }
+      }],
+    },
+    legend: {
+      display: false
+    },
+    tooltips: {
+      backgroundColor: "rgb(255,255,255)",
+      bodyFontColor: "#858796",
+      titleMarginBottom: 10,
+    }
+  }
+  }
+});
+</script>
+
     </body>
 </html>
