--- a/smartfarm_page/templates/str_smartfarm2.html
+++ b/smartfarm_page/templates/str_smartfarm2.html
@@ -154,7 +154,7 @@
             // ②차트의 데이터(Object)
             data: {
                 // ③x축에 들어갈 이름들(Array)
-                labels: ['Red', 'Blue', 'Yellow', 'Green', 'Purple', 'Orange','a','b','c','d','e','f'],
+                labels: ['2021-02-07', '2021-02-14', '2021-02-21', '2021-02-28', '2021-03-07', '2021-03-14', '2021-03-21', '2021-03-28', '2021-04-04', '2021-04-11', '2021-04-18', '2021-04-25', '2021-05-02', '2021-05-09', '2021-05-16', '2021-05-23', '2021-05-30'],
                 // ④실제 차트에 표시할 데이터들(Array), dataset객체들을 담고 있다.
                 datasets: [{
                     // ⑤dataset의 이름(String)
