--- a/smartfarm_page/templates/str_smartfarm2.html
+++ b/smartfarm_page/templates/str_smartfarm2.html
@@ -239,12 +239,12 @@ new Chart(document.getElementById("line-chart"), {
     labels: [1500,1600,1700,1750,1800,1850,1900,1950,1999,2050],
     datasets: [{
         data: [86,114,106,106,107,111,133,221,783,2478],
-        label: "Africa",
+        label: "유정민",
         borderColor: "#3e95cd",
         fill: false
       }, {
         data: [6,3,2,2,7,26,82,172,312,433],
-        label: "North America",
+        label: "정민",
         borderColor: "#c45850",
         fill: false
       }
