220108 edited 3rd page

--- a/smartfarm_page/templates/index.html
+++ b/smartfarm_page/templates/index.html
@@ -74,14 +74,14 @@
                   </div>
                 </div>
                 <div class="col-4">
-                  <div class="card"; onclick="location.href='finedust1';" style="cursor:pointer;" >
+                  <div class="card"; onclick="location.href='covid19';" style="cursor:pointer;" >
                       <div style="text-align:center;">
                           <div class="row mb-4"></div>
                           <img src="{% static 'smartfarm_page/assets/img/dust2.png' %}" width="300" height="300" alt=""/>
                       </div>
                        <div class="text-center card-body">
-                          <h4 class="card-title">미세먼지 현황 분석</h4>
-                          <p class="card-text">미세먼지 데이터를 활용하여<br> 국내 대기오염도 심층분석 및 활동 가이드라인제시</p>
+                          <h4 class="card-title">코로나19 현황 분석</h4>
+                          <p class="card-text">코로나 데이터를 활용한<br> 국내 코로나 현황 심층분석</p>
                        </div>
                   </div>
                 </div>
