--- a/smartfarm_page/templates/kids_pattern1.html
+++ b/smartfarm_page/templates/kids_pattern1.html
@@ -89,32 +89,32 @@
       <div class="col-md-offset-3 col-md-6 page-block">
           <h1 class="text-center" style="color: #484949;">영유아 스마트 케어</h1><br>
           <h2 class="text-center">아이의 정보를 입력하세요.</h2><br><br>
-            <form action="#" method="POST">
+            <form action="{% url 'result'%}" method="POST">
                 {% csrf_token %}
                 <br>
                 <div class="form-group">
                     <label for="exampleInputName" style="font-size:15px;">이름</label>
-                    <input type="text" class="form-control" id="exampleInputName" placeholder="Name" style="height:45px;font-size:15px;">
+                    <input  name="name" type="text" class="form-control" id="exampleInputName" placeholder="Name" style="height:45px;font-size:15px;">
                 </div>
                 <div class="form-group">
                     <label for="exampleInputcheck" style="font-size:15px;">어린이집</label>
-                    <select name="checkbox" class="form-control" id="exampleInputcheck" placeholder="어린이집" style="height:45px;font-size:15px;">
+                    <select name="C_name" class="form-control" id="exampleInputcheck" placeholder="어린이집" style="height:45px;font-size:15px;">
                         <option value="예닮어린이집" >예닮어린이집
                         <option value="평택어린이집">평택어린이집
                         </select><br>
                     <label for="exampleInputcheck" style="font-size:15px;">반</label>
-                    <select name="checkbox" class="form-control" id="exampleInputcheck2" placeholder="반" style="height:45px;font-size:15px;">
+                    <select name="class" class="form-control" id="exampleInputcheck2" placeholder="반" style="height:45px;font-size:15px;">
                         <optgroup label="예닮어린이집">
-                            <option value="ara">아라반</option>
-                            <option value="hana">하나반</option>
-                            <option value="narae">나래반</option>
-                            <option value="ato">아토반</option>
-                            <option value="maru">마루반</option>
-                            <option value="nuri">누리반</option>
+                            <option value="행복한아라반">아라반</option>
+                            <option value="행복한하나반">하나반</option>
+                            <option value="행복한나래반">나래반</option>
+                            <option value="행복한아토반">아토반</option>
+                            <option value="행복한마루반">마루반</option>
+                            <option value="행복한누리반">누리반</option>
                         <optgroup label="평택어린이집">
-                            <option value="6old" >독수리반
-                            <option value="5old">다람쥐반
-                            <option value="4old">병아리반
+                            <option value="독수리반" >독수리반
+                            <option value="다람쥐반">다람쥐반
+                            <option value="병아리반">병아리반
                             </select><br>
                 </div>
 
@@ -123,10 +123,10 @@
 <!--                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">-->
 <!--                </div>-->
                 <div class="form-group">
-                    <label for="exampleInputPassword1" style="font-size:15px;">Password ※(초기 : 생년월일6자리) </label>
-                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="password" style="height:45px;font-size:15px;">
-                </div><br>
-                <button type="submit" class="btn btn-primary">LOGIN</button><br><br><br><br><br><br><br><br><br><br><br><br>
+                    <label for="exampleInputcheck" style="font-size:15px;">생년월일 </label>
+                    <input name="password" type="date" class="form-control"  min="2016-01-01" max="2022-01-01" value="2020-01-01" style="height:45px;width:120;font-size:15px;">
+                </div><br><br><br>
+                <button type="submit" class="btn btn-primary" style="height:45px;width:120;font-size:16px;">확 인</button><br><br><br><br><br><br><br><br><br><br>
         </form>
 
       <!--blog posts container-->
